--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: 'Yamllint'
         uses: karancode/yamllint-github-action@master
         with:
-          yamllint_file_or_dir: 'sites.yml'
+          yamllint_file_or_dir: './'
           yamllint_strict: false
           yamllint_comment: true
         env:
