--- a/tutorials/tutorials.yml
+++ b/tutorials/tutorials.yml
@@ -2336,3 +2336,50 @@
   stack:
     - Strapi
   version: 3.2.3
+- title: Deploying Strapi on Heroku with MongoDB Atlas
+  link: https://www.youtube.com/watch?v=0PLoSxnxdVA
+  formats:
+    - video
+  language: en
+  date: 2020-10-25
+  authors:
+    - Pragmatic reviews
+  github_authors:
+  source: https://youtube.com
+  image_url: https://i.ytimg.com/vi/0PLoSxnxdVA/hq720.jpg
+  use_case: Deployment
+  stack:
+    - Heroku
+    - MongoDB Atlas
+  version: 3.2.5
+- title: Flutter + Strapi Fullstack CRUD Application
+  link: https://www.youtube.com/watch?v=gmEPNyjlrOY&t=850s
+  formats:
+    - video
+  language: en
+  date: 2020-10-27
+  authors:
+    - Mahesh Kariya
+  github_authors:
+    - itsmaheshkariya
+  source: https://youtube.com
+  image_url: https://i.ytimg.com/vi/gmEPNyjlrOY/hq720.jpg
+  use_case: API
+  stack:
+    - Flutter
+  version: 3.1.3
+- title: Setting up Strapi CMS with MongoDB Atlas
+  link: https://www.youtube.com/watch?v=fecd0C9dUp0
+  formats:
+    - video
+  language: en
+  date: 2020-10-27
+  authors:
+    - Pragmatic reviews
+  github_authors:
+  source: https://youtube.com
+  image_url: https://i.ytimg.com/vi/fecd0C9dUp0/hq720.jpg
+  use_case: Deployment
+  stack:
+    - MongoDB Atlas
+  version: 3.2.5
