--- a/tutorials/code/Helm-chart-for-strapi/templates/service.yaml
+++ b/tutorials/code/Helm-chart-for-strapi/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "starpi.fullname" . }}
+  name: {{ template "strapi.fullname" . }}
   labels:
-    app: {{ template "starpi.name" . }}
-    chart: {{ template "starpi.chart" . }}
+    app: {{ template "strapi.name" . }}
+    chart: {{ template "strapi.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
@@ -15,5 +15,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ template "starpi.name" . }}
+    app: {{ template "strapi.name" . }}
     release: {{ .Release.Name }}
